# cargo-auditable

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PARSING.md  README.md  REPLACING_CARGO.md  cargo-auditable.schema.json
.github/: dependabot.yml
.github/workflows/: check.yml  linux.yml  mac.yml  release.yml  windows-gnu.yml  (+3 more)
audit-info/: Cargo.toml
auditable/: Cargo.toml  build.rs
auditable-build/: Cargo.toml
auditable-build/src/: lib.rs
auditable-cyclonedx/: Cargo.toml
auditable-cyclonedx/src/: lib.rs
auditable-extract/: CHANGELOG.md  Cargo.toml  README.md
auditable-extract/fuzz/: Cargo.toml
auditable-extract/fuzz/fuzz_targets/: parse_wasm.rs
auditable-extract/src/: lib.rs  wasm.rs
auditable-info/: CHANGELOG.md  Cargo.toml  README.md
auditable-info/src/: lib.rs
auditable-inject/: Cargo.toml
auditable-serde/: CHANGELOG.md  Cargo.toml
auditable-serde/examples/: from-metadata.rs  json-to-toml.rs  toml-to-json.rs
auditable-serde/src/: compact_enum_variant.rs  lib.rs  validation.rs
auditable-serde/tests/fixtures/cargo-audit-dep-cycle/a/: Cargo.toml
auditable/src/: build_time.rs  lib.rs
auditable2cdx/: Cargo.toml
auditable2cdx/src/: main.rs  workarounds.rs
cargo-auditable/: CHANGELOG.md  Cargo.toml  build.rs  cargo-auditable.1
cargo-auditable/gen_manpage/: Cargo.toml
cargo-auditable/gen_manpage/src/: main.rs
cargo-auditable/src/: auditable_from_metadata.rs  binary_file.rs  cargo_arguments.rs  cargo_auditable.rs  cdx_workarounds.rs  collect_audit_data.rs  list_features.rs  main.rs  object_file.rs  platform_detection.rs  rustc_argument_parser.rs  rustc_arguments.rs  rustc_wrapper.rs  sbom_precursor.rs  target_info.rs
cargo-auditable/tests/: it.rs
cargo-auditable/tests/fixtures/bare_linker/: Cargo.toml
cargo-auditable/tests/fixtures/bare_linker/.cargo/: config.toml
cargo-auditable/tests/fixtures/build-then-runtime-dep/: Cargo.toml
cargo-auditable/tests/fixtures/build-then-runtime-dep/top_level_crate/: Cargo.toml
cargo-auditable/tests/fixtures/build_and_runtime_dep_with_different_features/: Cargo.toml
cargo-auditable/tests/fixtures/build_and_runtime_dep_with_different_features/build_dep/: Cargo.toml
cargo-auditable/tests/fixtures/build_and_runtime_dep_with_different_features/top_level_crate/: Cargo.toml
cargo-auditable/tests/fixtures/build_then_runtime_dep/build_dep/: Cargo.toml
cargo-auditable/tests/fixtures/build_then_runtime_dep/runtime_dep_of_build_dep/: Cargo.toml
cargo-auditable/tests/fixtures/build_then_runtime_dep/top_level_crate/: Cargo.toml
cargo-auditable/tests/fixtures/cargo-audit-dep-cycle/: Cargo.toml  README.md
cargo-auditable/tests/fixtures/cargo-audit-dep-cycle/b/: Cargo.toml
cargo-auditable/tests/fixtures/crate_with_build_script/: Cargo.toml  build.rs
cargo-auditable/tests/fixtures/custom_rustc_path/: Cargo.toml
cargo-auditable/tests/fixtures/custom_rustc_path/build_dep_of_runtime_dep/: Cargo.toml
cargo-auditable/tests/fixtures/custom_rustc_path/runtime_dep/: Cargo.toml
cargo-auditable/tests/fixtures/custom_rustc_path/top_level_crate/: Cargo.toml
cargo-auditable/tests/fixtures/git_source_of_dep/: Cargo.toml
cargo-auditable/tests/fixtures/lib_and_bin_crate/: Cargo.toml
cargo-auditable/tests/fixtures/lib_and_bin_crate/src/: lib.rs
cargo-auditable/tests/fixtures/lto_binary_crate/: Cargo.toml
cargo-auditable/tests/fixtures/lto_stripped_binary/: Cargo.toml
cargo-auditable/tests/fixtures/path_not_equal_name/bar/: Cargo.toml
cargo-auditable/tests/fixtures/path_not_equal_name/foo/: Cargo.toml
cargo-auditable/tests/fixtures/path_not_equal_name/qux/: Cargo.toml
cargo-auditable/tests/fixtures/platform_specific_deps/: Cargo.toml
cargo-auditable/tests/fixtures/platform_specific_deps/should_not_be_included/: Cargo.toml
cargo-auditable/tests/fixtures/platform_specific_deps/with_platform_dep/: Cargo.toml
cargo-auditable/tests/fixtures/proc-macro-dependency/: Cargo.toml
cargo-auditable/tests/fixtures/proc-macro-dependency/src/: main.rs
cargo-auditable/tests/fixtures/runtime_and_dev_dep_with_different_features/: Cargo.toml
cargo-auditable/tests/fixtures/runtime_and_dev_dep_with_different_features/dev_dep/: Cargo.toml
cargo-auditable/tests/fixtures/runtime_and_dev_dep_with_different_features/optional_transitive_dep/: Cargo.toml
cargo-auditable/tests/fixtures/runtime_and_dev_dep_with_different_features/optional_transitive_dep/src/: lib.rs
cargo-auditable/tests/fixtures/runtime_and_dev_dep_with_different_features/runtime_dep/: Cargo.toml
cargo-auditable/tests/fixtures/runtime_and_dev_dep_with_different_features/runtime_dep/src/: lib.rs
cargo-auditable/tests/fixtures/runtime_and_dev_dep_with_different_features/top_level_crate/: Cargo.toml
cargo-auditable/tests/fixtures/runtime_and_dev_dep_with_different_features/top_level_crate/src/: main.rs
cargo-auditable/tests/fixtures/wasm_crate/: Cargo.toml
cargo-auditable/tests/fixtures/wasm_crate/src/: lib.rs
cargo-auditable/tests/fixtures/workspace/: Cargo.toml
cargo-auditable/tests/fixtures/workspace/bar/: Cargo.toml
cargo-auditable/tests/fixtures/workspace/baz/: Cargo.toml
cargo-auditable/tests/fixtures/workspace/binary_and_cdylib_crate/: Cargo.toml
cargo-auditable/tests/fixtures/workspace/binary_and_cdylib_crate_with_features/: Cargo.toml
cargo-auditable/tests/fixtures/workspace/crate_with_features/: Cargo.toml
cargo-auditable/tests/fixtures/workspace/foo/: Cargo.toml
cargo-auditable/tests/fixtures/workspace/library_crate/: Cargo.toml
cargo-auditable/tests/fixtures/workspace/lto_binary_crate/: Cargo.toml
hello-auditable/: Cargo.toml  Cargo.toml~  build.rs
hello-auditable/src/: main.rs
resolverver/: Cargo.toml  README.md
resolverver/src/: error.rs  fields.rs  lib.rs  raw_fields.rs  resolver.rs
rust-audit/: Cargo.toml
rust-audit-info/: Cargo.toml  README.md
rust-audit-info/src/: main.rs
test-files/: hello-auditable-i686-unknown-linux-gnu  hello-auditable-x86_64-apple-darwin  hello-auditable-x86_64-pc-windows-gnu  hello-auditable-x86_64-unknown-linux-gnu
(+6 files in other folders)
