[package]
name = "auditable-build"
version = "0.2.0"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Shnatsel/rust-audit"
description = "Companion crate to `auditable`, split out for technical reasons"
edition = "2018"

[dependencies]
auditable-serde = {version = "0.2.0", path = "../auditable-serde", features = ["from_metadata"]}
miniz_oxide = "0.5.3"
serde_json = "1.0.57"
cargo_metadata = "0.15"
