[package]
name = "auditable-extract"
version = "0.1.0"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Shnatsel/rust-audit"
description = "Extract the dependency trees embedded in binaries by `auditable` crate."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binfarce = {git = "https://github.com/Shnatsel/binfarce.git" }