[package]
name = "auditable-serde"
version = "0.1.0-rc0"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Shnatsel/rust-audit"
description = "Serialize/deserialize data encoded by `auditable` crate"
categories = ["encoding"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
from_metadata = ["cargo_metadata"]
toml = ["cargo-lock"]

[dependencies]
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0.57"
semver = { version = "0.10", features = ["serde"] }
cargo_metadata = { version = "0.11", optional = true }
cargo-lock = { version = "4.0.1", default-features = false, optional = true }

[[example]]
name = "json-to-toml"
required-features = ["toml"]