[package]
name = "auditable-serde"
version = "0.5.0"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-secure-code/cargo-auditable"
description = "Serialize/deserialize data encoded by `cargo auditable`"
categories = ["encoding"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
from_metadata = ["cargo_metadata"]
toml = ["cargo-lock"]

[dependencies]
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0.57"
semver = { version = "1.0", features = ["serde"] }
cargo_metadata = { version = "0.15", optional = true }
cargo-lock = { version = "8.0.2", default-features = false, optional = true }
topological-sort = "0.2.2"

[[example]]
name = "json-to-toml"
required-features = ["toml"]
