[package]
name = "auditable-serde"
version = "0.6.1"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-secure-code/cargo-auditable"
description = "Serialize/deserialize data encoded by `cargo auditable`"
categories = ["encoding"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
from_metadata = ["cargo_metadata"]
toml = ["cargo-lock"]
schema = ["schemars"]

[dependencies]
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0.57"
semver = { version = "1.0", features = ["serde"] }
cargo_metadata = { version = "0.15", optional = true }
cargo-lock = { version = "=10.0.0-pre.0", default-features = false, optional = true }
topological-sort = "0.2.2"
schemars = {version = "0.8.10", optional = true }

[[example]]
name = "json-to-toml"
required-features = ["toml"]

[[example]]
name = "from-metadata"
required-features = ["from_metadata"]
