[package]
name = "auditable"
version = "0.0.3"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Shnatsel/rust-audit"
description = "Audit Rust binaries for known bugs or vulnerabilities in production with zero bookkeeping."
edition = "2018"
build = "build.rs"

[dependencies]
