[package]
name = "auditable"
version = "0.0.3"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Shnatsel/rust-audit"
description = "Audit Rust binaries for known bugs or vulnerabilities in production with zero bookkeeping."
edition = "2018"

[features]
default = []
build_time = ["auditable-serde", "miniz_oxide", "serde_json"]

[dependencies]
auditable-serde = {path = "../auditable-serde", features = ["from_metadata"], optional = true}
miniz_oxide = {version = "0.4.0", optional = true}
serde_json = {version =  "1.0.57", optional = true}
cargo_metadata = "0.11" 
