[package]
name = "auditable2cdx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auditable-info = {version = "0.7.0", path = "../auditable-info"}
auditable-cyclonedx = {version = "0.1.0", path = "../auditable-cyclonedx"}
