[package]
name = "auditable2cdx"
version = "0.1.1"
edition = "2021"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-secure-code/cargo-auditable"
description = "Command-line tool to recover `cargo auditable` data in CycloneDX format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auditable-info = {version = "0.10.0", path = "../auditable-info"}
auditable-cyclonedx = {version = "0.2.0", path = "../auditable-cyclonedx"}
serde_json = {version = "1.0.114", features = ["preserve_order"] } # the feature is needed for workarounds module only

[package.metadata.dist]
dist = false
