[package]
name = "cargo-auditable"
version = "0.6.4"
edition = "2021"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-secure-code/cargo-auditable"
description = "Make production Rust binaries auditable"
categories = ["development-tools::cargo-plugins", "encoding"]
keywords = ["security", "supply-chain", "sbom", "vulnerabilities"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = {version = "0.30", default-features = false, features = ["write"]}
auditable-serde = {version = "0.7.0", path = "../auditable-serde", features = ["from_metadata"]}
miniz_oxide = {version = "0.8.0"}
serde_json = "1.0.57"
cargo_metadata = "0.18"
pico-args = "0.5"
serde = "1.0.147"
wasm-gen = "0.1.4"

[dev-dependencies]
cargo_metadata = "0.18"
auditable-info = {version = "0.8.0", path = "../auditable-info", features = ["wasm"]}
which = "4.3.0"
