[package]
name = "cargo-auditable"
version = "0.6.7"
edition = "2021"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-secure-code/cargo-auditable"
description = "Make production Rust binaries auditable"
categories = ["development-tools::cargo-plugins", "encoding"]
keywords = ["security", "supply-chain", "sbom", "vulnerabilities"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = {version = "0.36", default-features = false, features = ["write"]}
auditable-serde = {version = "0.8.0", path = "../auditable-serde"}
miniz_oxide = {version = "0.8.0"}
serde_json = "1.0.57"
cargo_metadata = "0.18"
pico-args = { version = "0.5", features = ["eq-separator", "short-space-opt"] }
serde = "1.0.147"
wasm-gen = "0.1.4"
cargo-util-schemas = "0.8.1"

[dev-dependencies]
cargo_metadata = "0.18"
auditable-info = {version = "0.9.0", path = "../auditable-info", features = ["wasm"]}
which = "4.3.0"
