[package]
name = "hello-auditable"
version = "0.1.0"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
edition = "2018"

# Build script is required for `auditable-build`
build = "build.rs"

[dependencies]
auditable = {path = "../auditable"}

[build-dependencies]
auditable-build = {path = "../auditable-build"}
