[package]
name = "resolverver"
version = "0.1.0"
edition = "2021"
description = "Determines the Cargo resolver version for a workspace"
license = "MIT OR Apache-2.0"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
repository = "https://github.com/rust-secure-code/cargo-auditable"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }

[dev-dependencies]
cargo_metadata = "0.23"

