[package]
name = "rust-audit-info"
version = "0.1.0"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Shnatsel/rust-audit"
description = "Command-line tool to extract the dependency trees embedded in binaries by `auditable` crate."
categories = ["command-line-utilities", "encoding"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auditable-extract = {path = "../auditable-extract"}
miniz_oxide = "0.4.1"
#pico-args = "0.3.3"
