[package]
name = "rust-audit-info"
version = "0.5.1"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-secure-code/cargo-auditable"
description = "Command-line tool to extract the dependency trees embedded in binaries by `cargo auditable`."
categories = ["command-line-utilities", "encoding"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auditable-info = {version = "0.5.0", default-features = false, path = "../auditable-info"}

[workspace]
