[package]
name = "git_source_of_dep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
serde = { package = "serde", git = "https://github.com/serde-rs/serde", rev = "2ba406726f9f84bc3b65ce4e824ae636dfa7dc85" }
