[workspace]

members = [
    # lib crate, no cdylib or bin target
    "library_crate",
    # dependes on library_crate, has bin target 
    "binary_and_cdylib_crate",
    # depends on library_crate and binary_and_cdylib_crate optionally, just library_crate by default
    # produces bin and cdylib
    "crate_with_features",
]
